--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --color-blue-primary: #77c2ff;
+}
+
+body {
+  font-family: monospace;
+  margin: 0;
+}
+
+a {
+  text-decoration-line: none;
+}
